cluster-config/ingress-nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vts-ingress
  namespace: vts-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-front
                port:
                  number: 3005
